fix: add media for review
